# product-hunt-mailer

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  mailer.py  main.py  scraper.py  summarizer.py
